--- a/ObligatoriskOpgave/app/src/main/res/layout/activity_rooms_in_building.xml
+++ b/ObligatoriskOpgave/app/src/main/res/layout/activity_rooms_in_building.xml
@@ -6,4 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".RoomsInBuildingActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/RoomIndBuildingListViewShowRooms">
+
+        </ListView>
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
