--- a/ObligatoriskOpgave/app/src/main/res/layout/activity_add_reservation.xml
+++ b/ObligatoriskOpgave/app/src/main/res/layout/activity_add_reservation.xml
@@ -69,7 +69,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/AddReservation"
-            android:id="@+id/AddReservationButtonAddReservation"/>
+            android:id="@+id/AddReservationButtonAddReservation"
+            android:onClick="PostRes"/>
 
     </LinearLayout>
 
