--- a/ObligatoriskOpgave/app/src/main/res/layout/activity_user_log_in.xml
+++ b/ObligatoriskOpgave/app/src/main/res/layout/activity_user_log_in.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".UserLogInActivity">
 
+<include layout="@layout/main_toolbar"
+    android:id="@+id/LoginToolbar"/>
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -30,6 +35,8 @@
             android:id="@+id/DeleteReservationButton"
             android:text="@string/Delete"
             android:onClick="DeleteReservation"/>
+
+
 
     </LinearLayout>
 
